<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_color"
    tools:context=".activities.SetAlarmActivity"
    tools:layout_editor_absoluteY="81dp">

    <TimePicker

        android:id="@+id/theTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:amPmBackgroundColor="@color/dayindikator"

        android:timePickerMode="clock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TimePicker>


    <CheckBox
        android:id="@+id/montag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:checked="true"
        android:fontFamily="@font/muli_bold"
        android:text="@string/man"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_update"
        app:layout_constraintEnd_toStartOf="@+id/dienstag"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/dienstag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:checked="true"
        android:fontFamily="@font/muli_bold"
        android:text="@string/die"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_update"
        app:layout_constraintEnd_toStartOf="@+id/mittwoch"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/montag" />

    <CheckBox
        android:id="@+id/mittwoch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:checked="true"
        android:fontFamily="@font/muli_bold"
        android:text="@string/mit"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_update"
        app:layout_constraintEnd_toStartOf="@+id/donnerstag"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dienstag" />

    <CheckBox
        android:id="@+id/donnerstag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:checked="true"
        android:fontFamily="@font/muli_bold"
        android:text="@string/don"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_update"
        app:layout_constraintEnd_toStartOf="@+id/freitag"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mittwoch" />

    <CheckBox
        android:id="@+id/freitag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:checked="true"
        android:fontFamily="@font/muli_bold"
        android:text="@string/fre"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_update"
        app:layout_constraintEnd_toStartOf="@+id/samstag"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/donnerstag" />

    <CheckBox
        android:id="@+id/samstag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:checked="true"
        android:fontFamily="@font/muli_bold"
        android:text="@string/dagnavn6"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_update"
        app:layout_constraintEnd_toStartOf="@+id/sonntag"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/freitag" />

    <CheckBox
        android:id="@+id/sonntag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:checked="true"
        android:fontFamily="@font/muli_bold"
        android:text="@string/son"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/samstag" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="395dp"
        android:layout_height="36dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/toogle_button_style_vma"
        android:fontFamily="@font/gruppo"
        android:text="@string/alarmupdate"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/weckerLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/die"
        android:ems="10"
        android:fontFamily="@font/gruppo"
        android:hint="@string/medikamenttext_hint"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/donnerstag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/medikamenttext_hint" />

    <Switch
        android:id="@+id/hourswitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:checked="true"
        android:switchPadding="10dp"
        android:textOff="@string/hourampm"
        android:textOn="@string/hour24"
        android:textSize="14sp"
        android:trackTint="@color/green_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resetbutton"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_replay_black_24dp"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/weckerLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/klokkalabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="141dp"
        android:fontFamily="@font/muli_extralight"
        android:text="@string/select_time"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/theTimePicker"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="12:30" />

</android.support.constraint.ConstraintLayout>