<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_natur_bck"
    tools:context=".activities.LogInActivity">

    <EditText
        android:id="@+id/editusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:fontFamily="@font/gruppo"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
        android:drawablePadding="5dp"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/holo_blue_bright"
        android:textColorHint="#52afaa"
        android:textColorLink="@android:color/holo_red_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="@font/gruppo"
        android:hint="@string/password_hint"
        android:inputType="numberPassword"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="5dp"
        android:singleLine="true"
        android:textColor="@android:color/background_light"
        android:textColorHint="#52afaa"
        android:textColorLink="@android:color/holo_red_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editusername" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_buttons"
        android:fontFamily="@font/muli_extralight"
        android:text="@string/submit"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonclear" />

    <Button
        android:id="@+id/button_reg"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_buttons"
        android:fontFamily="@font/muli_extralight"
        android:text="@string/register"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_submit" />

    <Button
        android:id="@+id/buttonclear"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_buttons"
        android:fontFamily="@font/muli_bold"
        android:text="@string/clear"
        android:textColor="@android:color/background_light"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/button_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editpassword" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/arizonia"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:text="@string/action_sign_in_short"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>